--- a/example/package.json
+++ b/example/package.json
@@ -17,11 +17,7 @@
   "license": "ISC",
   "cordova": {
     "platforms": [],
-    "plugins": {
-      "io-anyline-cordova": {}
-    }
+    "plugins": {}
   },
-  "dependencies": {
-    "io-anyline-cordova": "file:../plugin"
-  }
+  "dependencies": {}
 }
