removed bin/obj, trying XAML integration in cordova

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ node_modules
 src/android/.idea
 npm-debug.log
 .vscode
+/plugin/src/windows/AnylineProxy/AnylineProxy/bin
+/plugin/src/windows/AnylineProxy/AnylineProxy/obj
