--- a/plugin/src/windows/AnylineProxy/AnylineProxy/AnylineProxy.csproj
+++ b/plugin/src/windows/AnylineProxy/AnylineProxy/AnylineProxy.csproj
@@ -108,20 +108,24 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnylineProxy.xaml.cs" />
+    <Compile Include="AnylineProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScanPage.xaml.cs">
+      <DependentUpon>ScanPage.xaml</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\AnylineProxy.rd.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Anyline">
-      <HintPath>..\..\lib\Anyline.winmd</HintPath>
+    <Reference Include="Anyline, Version=255.255.255.255, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\x86\Anyline.winmd</HintPath>
     </Reference>
-    <Reference Include="AnylineSDK">
-      <HintPath>..\..\lib\AnylineSDK.dll</HintPath>
+    <Reference Include="Anyline.SDK">
+      <HintPath>..\..\lib\x86\Anyline.SDK.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="AnylineProxy.xaml">
+    <Page Include="ScanPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
