--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anyline-cordova-example",
-  "version": "3.26.0",
+  "version": "3.27.0",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,8 @@
   "license": "ISC",
   "cordova": {
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ],
     "plugins": {
       "io-anyline-cordova": {}
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "cordova-android": "^7.1.1",
+    "cordova-ios": "^4.5.5",
     "io-anyline-cordova": "file:../plugin"
   }
 }
