--- a/example/package.json
+++ b/example/package.json
@@ -16,8 +16,17 @@
   "author": "Jonas Laux | Daniel Albertini",
   "license": "ISC",
   "cordova": {
-    "platforms": [],
-    "plugins": {}
+    "platforms": [
+      "android",
+      "ios"
+    ],
+    "plugins": {
+      "io-anyline-cordova": {}
+    }
   },
-  "dependencies": {}
+  "dependencies": {
+    "cordova-android": "^7.1.1",
+    "cordova-ios": "^4.5.5",
+    "io-anyline-cordova": "file:../plugin"
+  }
 }
