--- a/example/package.json
+++ b/example/package.json
@@ -17,13 +17,15 @@
   "license": "ISC",
   "cordova": {
     "platforms": [
-      "windows"
+      "windows",
+      "ios"
     ],
     "plugins": {
       "io-anyline-cordova": {}
     }
   },
   "dependencies": {
+    "cordova-ios": "^4.5.5",
     "cordova-windows": "^6.0.0",
     "io-anyline-cordova": "file:../plugin"
   }
