--- a/plugin/src/windows/AnylineProxy/AnylineProxy/AnylineProxy.csproj
+++ b/plugin/src/windows/AnylineProxy/AnylineProxy/AnylineProxy.csproj
@@ -109,6 +109,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnylineProxy.cs" />
+    <Compile Include="App.xaml.cs">
+      <DependentUpon>App.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScanPage.xaml.cs">
       <DependentUpon>ScanPage.xaml</DependentUpon>
@@ -125,6 +128,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="App.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="MyView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ScanPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
