--- a/plugin/src/windows/AnylineProxy/AnylineProxy/AnylineProxy.csproj
+++ b/plugin/src/windows/AnylineProxy/AnylineProxy/AnylineProxy.csproj
@@ -46,7 +46,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <GenerateLibraryLayout>false</GenerateLibraryLayout>
+    <GenerateLibraryLayout>true</GenerateLibraryLayout>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <PlatformTarget>x86</PlatformTarget>
