--- a/example/package.json
+++ b/example/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "cordova": {
     "platforms": [
+      "ios",
       "windows"
     ],
     "plugins": {
@@ -25,7 +26,8 @@
     }
   },
   "dependencies": {
-    "cordova-windows": "^6.0.0",
+    "cordova-ios": "latest",
+    "cordova-windows": "^6.0.1",
     "io-anyline-cordova": "file:../plugin"
   }
 }
