updated SDK & config so now the plugin loads :)

--- a/example/package.json
+++ b/example/package.json
@@ -21,9 +21,7 @@
       "ios",
       "windows"
     ],
-    "plugins": {
-      "io-anyline-cordova": {}
-    }
+    "plugins": {}
   },
   "dependencies": {
     "cordova-ios": "latest",
