changed plugin structure

--- a/example/package.json
+++ b/example/package.json
@@ -21,7 +21,9 @@
       "ios",
       "windows"
     ],
-    "plugins": {}
+    "plugins": {
+      "io-anyline-cordova": {}
+    }
   },
   "dependencies": {
     "cordova-ios": "latest",
