--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -122,19 +122,22 @@
 
      <!-- windows -->
     <platform name="windows">
-		<!--<framework src="src/windows/lib/x86/TEST.winmd" target-dir="x86" arch="x86" custom="true"/>-->
         <framework src="src\windows\lib\x86\Anyline.JS.winmd" target-dir="x86" arch="x86" custom="true" versions=">=10.0"/>
         <framework src="src\windows\lib\x86\Anyline.winmd" implementation="src\windows\lib\x86\Anyline.dll" target-dir="x86" arch="x86" custom="true" versions=">=10.0"/>
-        <!--<framework src="src\windows\lib\x86\Anyline.SDK.dll" target-dir="x86" arch="x86" custom="true" versions=">=10.0"/>-->
-        <asset src="src\windows\lib\x86\Anyline.SDK.dll" target-dir="x86" arch="x86" />
+        <framework src="src\windows\lib\x86\Anyline.SDK.dll" target-dir="x86" arch="x86" />
 		
-        <js-module src="src/windows/AnylineProxy.js" name="AnylineProxy">
-            <merges target="" />
+        <js-module src="src/windows/AnylineProxy.js" name="AnylineProxy" >
+            <runs />
         </js-module>
-        <!-- <js-module src="src/windows/scanview.js" name="ScanView">
-            <merges target="anyline.sdk" />
-        </js-module> -->
-        <asset src="src/windows/js" target="js" />
+        <js-module src="src/windows/scanview.js" name="ScanView">
+            <clobbers target="anyline.sdk" />
+        </js-module>
+        <js-module src="src/windows/js/cutout.js" name="Cutout" >
+        </js-module>
+        <js-module src="src/windows/js/util.js" name="Util" >
+        </js-module>
+        <js-module src="src/windows/js/visualFeedback.js" name="VisualFeedback" >
+        </js-module>
         <asset src="src/windows/css" target="css" />
     </platform>
 
