--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -99,17 +99,24 @@
                       android:theme="@android:style/Theme.Black.NoTitleBar" />
             <activity android:name="io.anyline.cordova.DocumentActivity"
                       android:theme="@android:style/Theme.Black.NoTitleBar" />
+	    <activity android:name="io.anyline.cordova.Document4Activity"
+                      android:theme="@android:style/Theme.Black.NoTitleBar" />
+	    <activity android:name="io.anyline.cordova.Anyline4Activity"
+                      android:theme="@android:style/Theme.Black.NoTitleBar" />
         </config-file>
 
         <!-- add plugin source code -->
-        <source-file src="src/android/io/anyline/cordova/AnylineBaseActivity.java" target-dir="src/io/anyline/cordova"/>
+	<source-file src="src/android/io/anyline/cordova/Anyline4Activity.java" target-dir="src/io/anyline/cordova"/>        
+	<source-file src="src/android/io/anyline/cordova/AnylineBaseActivity.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/AnylineOcrActivity.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/AnylinePlugin.java" target-dir="src/io/anyline/cordova"/>
+	<source-file src="src/android/io/anyline/cordova/AnylinePluginHelper.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/BarcodeActivity.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/MrzActivity.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/EnergyActivity.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/LicensePlateActivity.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/DocumentActivity.java" target-dir="src/io/anyline/cordova"/>
+        <source-file src="src/android/io/anyline/cordova/Document4Activity.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/CordovaUIConfig.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/ResultReporter.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/Resources.java" target-dir="src/io/anyline/cordova"/>
@@ -122,6 +129,8 @@
                        target="res/values-de/anyline_sdk_plugin_strings.xml"/>
         <resource-file src="src/android/res/layout/activity_scan_document.xml"
                        target="res/layout/activity_scan_document.xml"/>
+        <resource-file src="src/android/res/layout/activity_scan_scanview.xml"
+                       target="res/layout/activity_scan_scanview.xml"/>
 
     </platform>
 
