--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ node_modules
 src/android/.idea
 npm-debug.log
 .vscode
-/plugin/src/windows/AnylineProxy/AnylineProxy/bin
-/plugin/src/windows/AnylineProxy/AnylineProxy/obj
-/plugin/src/windows/AnylineProxy/AppUwpJS/bin
-/plugin/src/windows/AnylineProxy/AppUwpJS/bld
+plugin/src/windows/AnylineProxy/AnylineProxy/bin
+plugin/src/windows/AnylineProxy/AnylineProxy/obj
+plugin/src/windows/AnylineProxy/AppUwpJS/bin
+plugin/src/windows/AnylineProxy/AppUwpJS/bld
+example/package-lock.json
