--- a/example/package.json
+++ b/example/package.json
@@ -17,8 +17,17 @@
   "author": "Jonas Laux | Daniel Albertini",
   "license": "ISC",
   "cordova": {
-    "plugins": {},
-    "platforms": []
+    "plugins": {
+      "io-anyline-cordova": {}
+    },
+    "platforms": [
+      "ios",
+      "android"
+    ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "cordova-android": "^7.1.4",
+    "cordova-ios": "^4.5.5",
+    "io-anyline-cordova": "file:../plugin"
+  }
 }
