fixed language/ale loading bug

--- a/example/package.json
+++ b/example/package.json
@@ -21,8 +21,8 @@
       "io-anyline-cordova": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   },
   "dependencies": {
