--- a/example/package.json
+++ b/example/package.json
@@ -18,16 +18,11 @@
   "license": "ISC",
   "cordova": {
     "plugins": {
-      "io-anyline-cordova": {},
       "cordova-plugin-file": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   },
   "dependencies": {
-    "cordova-android": "^7.1.4",
-    "cordova-plugin-file": "^6.0.1",
-    "io-anyline-cordova": "file:../plugin"
+    "cordova-plugin-file": "^6.0.1"
   }
 }
