changed path from windows framework added platform to plugin package

--- a/plugin/package.json
+++ b/plugin/package.json
@@ -6,7 +6,8 @@
     "id": "io-anyline-cordova",
     "platforms": [
       "ios",
-      "android"
+      "android",
+      "windows"
     ]
   },
   "keywords": [
