--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -3,7 +3,7 @@
         xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="io-anyline-cordova"
-        version="7.0.0">
+        version="7.0.1">
 
     <name>AnylineSDK</name>
 
@@ -156,6 +156,7 @@
         </js-module>
         <asset src="src/windows/css" target="css" />
         <asset src="src/windows/js" target="js" />
+		<asset src="src/windows/img" target="img" />
     </platform>
 
 </plugin>
