--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -5,14 +5,14 @@ repositories{
 
 dependencies {
   	implementation 'com.google.android.gms:play-services-vision:17.0.2'
-    implementation 'io.anyline:anylinesdk:7@aar'
+    implementation 'io.anyline:anylinesdk:8@aar'
 }
 
 android {
 
   defaultConfig {
     ndk {
-      abiFilters "armeabi-v7a", "x86" 
+      abiFilters "armeabi-v7a", "x86", "arm64-v8a"
     } 
   }
 
