--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -4,8 +4,9 @@ repositories{
 }
 
 dependencies {
-  	implementation 'com.google.android.gms:play-services-vision:17.0.2'
-    implementation 'io.anyline:anylinesdk:9-RC1@aar'
+    implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
+    implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
+    implementation 'io.anyline:anylinesdk:9-RC3@aar'
 }
 
 android {
