--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -4,9 +4,9 @@ repositories{
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
-    implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
-    implementation 'io.anyline:anylinesdk:9@aar'
+    compile 'com.google.firebase:firebase-ml-vision:19.0.2'
+    compile 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
+    compile 'io.anyline:anylinesdk:9@aar'
 }
 
 android {
