fullImagePath on Android Bugfix, Version Bump

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ plugin/src/windows/AnylineProxy/AnylineProxy/obj
 plugin/src/windows/AnylineProxy/AppUwpJS/bin
 plugin/src/windows/AnylineProxy/AppUwpJS/bld
 example/package-lock.json
+.history
