add js interface and clobber name; add support for ionic-native

--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -7,6 +7,9 @@
 
     <name>AnylineSDK</name>
 
+    <js-module src="www/anyline.js" name="anyline">
+        <clobbers target="window.Anyline" />
+    </js-module>
 
     <!--Add Platform specific Files-->
     <platform name="ios">
