--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -1,19 +1,33 @@
 repositories{
     jcenter()
     maven { url 'https://anylinesdk.blob.core.windows.net/maven/'}
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
+    implementation 'com.google.firebase:firebase-ml-vision:23.0.0'
     implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
-    implementation 'io.anyline:anylinesdk:14@aar'
+    // implementation 'io.anyline:anylinesdk:14@aar'
+
+    // added for document scanner UI:
+    implementation (name:'anylinesdk-release-15-dev', ext:'aar')
+
+    // needed for document scanner ui bottom sheet, includes also appcompat:
+    implementation ('com.google.android.material:material:1.1.0-alpha10')
+
+    implementation 'androidx.multidex:multidex:2.0.1'
+
 }
 
 android {
 
   defaultConfig {
-    ndk {
-      abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
+      multiDexEnabled true
+
+      ndk {
+      abiFilters "armeabi-v7a", "x86", "arm64-v8a"
     } 
   }
 
@@ -26,6 +40,7 @@ android {
     exclude 'META-INF/NOTICE'
     exclude 'META-INF/LICENSE'
   }
+
 }
 
 ext.postBuildExtras = {
