updated sourcelist, toast instead of AlertDialog for scan again

--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -129,16 +129,29 @@
         <source-file src="src/android/io/anyline/cordova/CordovaUIConfig.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/ResultReporter.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/Resources.java" target-dir="src/io/anyline/cordova"/>
+        <source-file src="src/android/io/anyline/cordova/CropViewUIActivity.java" target-dir="src/io/anyline/cordova"/>
+        <source-file src="src/android/io/anyline/cordova/DocumentScanViewUIActivity.java" target-dir="src/io/anyline/cordova"/>
+        <source-file src="src/android/io/anyline/cordova/DocScanUIMainActivity.java" target-dir="src/io/anyline/cordova"/>
 
         <resource-file src="src/android/res/values/anyline_sdk_plugin_strings.xml"
                        target="res/values/anyline_sdk_plugin_strings.xml"/>
         <resource-file src="src/android/res/values/anyline_sdk_plugin_colors.xml"
                        target="res/values/anyline_sdk_plugin_colors.xml"/>
+        <resource-file src="src/android/res/values/dimens.xml"
+                       target="res/values/dimens.xml"/>
         <resource-file src="src/android/res/values-de/anyline_sdk_plugin_strings.xml"
                        target="res/values-de/anyline_sdk_plugin_strings.xml"/>
         <resource-file src="src/android/res/layout/activity_scan_document.xml"
                        target="res/layout/activity_scan_document.xml"/>
         <resource-file src="src/android/res/layout/activity_scan_scanview.xml"
+                       target="res/layout/activity_scan_scanview.xml"/>
+        <resource-file src="src/android/res/layout/activity_doc_scan_ui_main.xml"
+                       target="res/layout/activity_scan_scanview.xml"/>
+        <resource-file src="src/android/res/layout/activity_doc_scan_ui_main_list_item.xml"
+                       target="res/layout/activity_scan_scanview.xml"/>
+        <resource-file src="src/android/res/layout/cordova_activity_crop_view_ui.xml"
+                       target="res/layout/activity_scan_scanview.xml"/>
+        <resource-file src="src/android/res/layout/cordova_activity_document_scan_view_ui.xml"
                        target="res/layout/activity_scan_scanview.xml"/>
 
     </platform>
