--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -1,29 +1,25 @@
 repositories{
     google()
     jcenter()
-    maven { url 'https://anylinesdk.blob.core.windows.net/maven/'}
+    maven { url 'https://anylinesdk.blob.core.windows.net/testing/'}
+
     flatDir {
         dirs 'libs'
     }
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-ml-vision:23.0.0'
+    implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
     implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
-    implementation 'io.anyline:anylinesdk:15@aar'
-
-    // needed for document scanner ui bottom sheet, includes also appcompat:
+    implementation 'io.anyline:anylinesdk:16-RC3@aar'
+    //implementation (name: 'anylinesdk-release-16-RC2', ext: 'aar')
     implementation ('com.google.android.material:material:1.1.0-alpha10')
-
-    implementation 'androidx.multidex:multidex:2.0.1'
 
 }
 
 android {
 
   defaultConfig {
-      multiDexEnabled true
-
       ndk {
       abiFilters "armeabi-v7a", "x86", "arm64-v8a"
     } 
