--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -1,7 +1,7 @@
 repositories{
     google()
     jcenter()
-    maven { url 'https://anylinesdk.blob.core.windows.net/maven/'}
+    maven { url 'https://anylinesdk.blob.core.windows.net/testing/'}
     flatDir {
         dirs 'libs'
     }
@@ -10,8 +10,8 @@ repositories{
 dependencies {
     implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
     implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
-//    implementation 'io.anyline:anylinesdk:15@aar'
-    implementation (name: 'anylinesdk-release-16-RC3', ext: 'aar')
+    implementation 'io.anyline:anylinesdk:16-RC4NoUI@aar'
+    //implementation (name: 'anylinesdk-release-16-RC4', ext: 'aar')
 
 }
 
