--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -10,8 +10,8 @@ repositories{
 dependencies {
     implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
     implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
-//    implementation 'io.anyline:anylinesdk:15@aar'
-    implementation (name: 'anylinesdk-release-16-RC3', ext: 'aar')
+    implementation 'io.anyline:anylinesdk:16@aar'
+//    implementation (name: 'anylinesdk-release-16', ext: 'aar')
 
 }
 
