--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -18,7 +18,7 @@ android {
 
   defaultConfig {
       ndk {
-      abiFilters "armeabi-v7a", "x86", "arm64-v8a"
+      abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
     } 
   }
 
